syntax = "proto3";

package user;

service UserService {
  rpc FindUserById (FindUserByIdRequest) returns (UserResponse);
}

message FindUserByIdRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string user_name = 2;
  string email = 3;
  int32 age = 4;
  string password = 5;
}
