syntax = "proto3";

package video;

service VideoService {
  rpc FindVideosByOwnerId(FindVideosByOwnerIdRequest)
      returns (VideoListResponse);
  rpc TestGrpc(TestRequest) returns (TestResponse);
  rpc UploadVideo(VideoRequest) returns (VideoResponse);
  rpc AddComment(AddCommentRequest) returns (VideoResponse);
}

message FindVideosByOwnerIdRequest { string id = 1; }

message VideoRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string url = 4;
  repeated string tags = 5;
  string owner = 6;
  int32 ageConstraint = 7;
}

message AddCommentRequest {
  string id = 1;
  string comment = 2;
}

message VideoResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string url = 4;
  repeated string comment = 5;
}

message TestRequest { string message = 1; }

message TestResponse { string message = 1; }

message VideoListResponse { repeated VideoResponse videos = 1; }
